# desktop-tutorial

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  LICENSE  README.md  SECURITY.md  ai-biz.html  ai-robot.html  bg.js  contact.html  dx.html  index.html  metaverse.html  mission.html  print.html  pyproject.toml  recovery-lounge.html  services.html  style.css  vision.html  web.html
.github/workflows/: ci.yml  release.yml
data/: state.json
src/growing_agent/: __init__.py  __main__.py  autonomy.py  config.py  evaluator.py  i18n.py  memory.py  orchestrator.py  prompt_catalog.py  prompt_planner.py  prompt_registry.py  prompt_runtime.py
src/growing_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/growing_agent/prompt_catalog/: apps.json  planner.json  platforms.json  workflows.json
src/growing_agent/tools/: __init__.py  runner.py
tests/: test_autonomy.py  test_cli.py  test_config.py  test_evaluator.py  test_memory.py  test_orchestrator.py  test_prompt_catalog.py  test_prompt_planner.py  test_prompt_runtime.py  test_runner.py  test_sample.py
