[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "growing_agent"
version = "0.1.0"
description = "Minimal growing agent loop project"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
